--- a/force-app/main/default/classes/AccountAutomations.cls
+++ b/force-app/main/default/classes/AccountAutomations.cls
@@ -27,11 +27,8 @@ public class AccountAutomations {
         return a;
     }
     
-    //this is a comment
-    //double comment
-    //still a comment
-    // yes
-    //still a comment
-    // still a. comment this time
+    //this is a comment 2
+    //test5
+
     
 }
