US-0000036 2 Commits Test

--- a/force-app/main/default/classes/OpportunityHelper.cls
+++ b/force-app/main/default/classes/OpportunityHelper.cls
@@ -23,6 +23,7 @@ public class OpportunityHelper {
         if(opp != null) {
             opp.StageName = newStage;
             update opp;
+            //comment for testing
         }
     }
 }
