--- a/force-app/main/default/classes/AccountAutomations.cls
+++ b/force-app/main/default/classes/AccountAutomations.cls
@@ -27,10 +27,7 @@ public class AccountAutomations {
         return a;
     }
     
-    //this is a comment
-    //double comment
-    //still a comment
-    // yes
-    //still a comment
+    //this is a comment 567899000000
+
     
 }
